--- a/compose.yaml
+++ b/compose.yaml
@@ -21,3 +21,20 @@ services:
       nofile:
         soft: 32768
         hard: 32768
+  redis:
+    image: redis:latest
+    container_name: redis_broker
+    ports:
+      - "6379:6379"
+  worker_sofmap:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: worker_sofmap
+    command: celery -A tasks worker --loglevel=info --concurrency=1 -Q sofmap_work_queue
+    volumes:
+      - ./ex_search:/app/ex_search
+      - ./data/db:/app/db
+      - ./data/log:/app/log
+    depends_on:
+      - redis
